# optimization-puzzles

./: README.md  pyproject.toml
problem_1/: meinoff-selman.jl
problem_2/: test_pyOpt.py
problem_3/: mmc.py  salabim_test.py
problem_5_portugal/: data_analysis.ipynb
